FTKernelAPI_SDK/FTKernel_API/FTKernelAPI.h

//////////////////////////////////////////////////////////////////////////

//定义64位无符号长整型
//Define 64bit long integer type
typedef unsigned __int64 QWORD;
//定义配置文件对象的句柄
//Define Config INI file handle
typedef LONG *HConfigIni;
//定义下载任务的句柄
//Define downloader handle
typedef LONG *HDownloader;
//代理的类型
//Proxytypes
#define PROXYTYPE_NOPROXY 0
	
	//初始化下载对象4
	//Initialize a HDownloader
	//@pData: a torrent binary object, a pointer to a binary torrent file content
	//@nLength: the length of a torrent binary object
	//@pPreAllocFile: a array of preallocated files, 0->no, 1->yes
	//@nPreAllocFileLen: length of preallocated array
	//@bOnlyCheckFile: only verify data of files
	//@lpszDestFileName: the downloaded filename
	//@hConfigIni: kernel configuration file handle - INI file
	//@lpszLogFileName: output log filename
	//@lpszStatusFileName: downloading status filename
	//@lpszDesKey: DES-EDE2 password
	//@nCodePage: code page of the torrent file
	FTKERNELAPI_API BOOL BTAPI FTK_Downloader_Init4( 
		HDownloader hDownloader,
		const char *pData, int nLength,
		BYTE *pPreAllocFile, int nPreAllocFileLen,
		BOOL bOnlyCheckFile = FALSE,
		const char * lpszDestFileName = NULL,
		HConfigIni hConfigIni = NULL,
		const char * lpszLogFileName = NULL,
		const char * lpszStatusFileName = NULL,
		BOOL bQuicklySeed = FALSE,
		const char * lpszDesKey = NULL,
		UINT nCodePage = CP_ACP );
	
	//释放下载对象
	//Release downloader handle
	FTKERNELAPI_API BOOL BTAPI FTK_Downloader_Release( HDownloader hDownloader );
	
	//执行下载线程
	//Execute downloader
	FTKERNELAPI_API BOOL BTAPI FTK_Downloader_Execute( HDownloader hDownloader );
	
	//暂停下载
	//Pause downloader
	FTKERNELAPI_API void BTAPI FTK_Downloader_Pause( HDownloader hDownloader );
	
	//恢复下载
	//Resume downloader
	FTKERNELAPI_API void BTAPI FTK_Downloader_Resume( HDownloader hDownloader );
	
	//是否已经初始化
	//Is downloader intialized?
	FTKERNELAPI_API BOOL BTAPI FTK_Downloader_IsInit( HDownloader hDownloader );
	
	//获取下载任务目前的阶段状态
	//Return downloader state
	FTKERNELAPI_API UINT BTAPI FTK_Downloader_GetState( HDownloader hDownloader );
	
	//是否只是进行文件检查
	//Only checking file, don't downloading...
	FTKERNELAPI_API BOOL BTAPI FTK_Downloader_IsOnlyCheckFile( HDownloader hDownloader );
	
	//是否已经完成了下载(判断选择文件下载)
	//Is all selected files finished?
	FTKERNELAPI_API BOOL BTAPI FTK_Downloader_IsFinished( HDownloader hDownloader );
	
	//是否已经完成了下载(全部下载)
	//Is all files finished?
	FTKERNELAPI_API BOOL BTAPI FTK_Downloader_IsAllFinished( HDownloader hDownloader );
	
	//连接指定的Peer
	//Add external source peer
	FTKERNELAPI_API void BTAPI FTK_Downloader_AddSource( HDownloader hDownloader, const char *pchIP, unsigned short nPort, const BYTE *pPeerID = NULL, unsigned char nTunnel = 0 );
	
	//连接指定的User
	//Add external source peer(socket handle)
	FTKERNELAPI_API void BTAPI FTK_Downloader_AddSourceExt( HDownloader hDownloader, unsigned int nSocket );
	
	//外部动态增加辅助的Announce
	//Add external announce
	FTKERNELAPI_API void BTAPI FTK_Downloader_AddExtAnnounce( HDownloader hDownloader, const char * lpszAnnounce );
	
	//手动控制Announce马上进行连接
	//Reannounce manually
	FTKERNELAPI_API void BTAPI FTK_Downloader_ReannounceAll( HDownloader hDownloader );
	
	//按照块的先后顺序进行下载(适用于边下载边播放的情况)
	//Tell kernel to sequential download piece
	FTKERNELAPI_API void BTAPI FTK_Downloader_SetSeqPicker( HDownloader hDownloader, BOOL bSeq = FALSE, int nSEQFileIndex = 0 );
	
	//设置下载文件的优先级别
	// -2:不下载, -1: 低, 0: 一般, 1:高
	//Set priority of file
	//-2: no download, -1: low, 0: middle, 1: high
	FTKERNELAPI_API void BTAPI FTK_Downloader_SetFilePriority( HDownloader hDownloader, int nIndex, char chPriority = 0, BOOL bDoPriority = TRUE );
	
	//强制立刻重新将文件的优先级赋值给Piece
	//Force to set priority of all piece immediately 
	FTKERNELAPI_API void BTAPI FTK_Downloader_ForceFilePriority( HDownloader hDownloader );
	
	//外部调用, 手动设置最大的下载率限制(0.0表示没有限制)
	//Set fixed max download rate
	FTKERNELAPI_API void BTAPI FTK_Downloader_SetFixMaxDownloadRate( HDownloader hDownloader, double fMaxDownloadRate = 0.0 );
	
	//外部调用, 获取手动设置最大的下载率限制(0.0表示没有限制)
	//Get fixed max download rate
	FTKERNELAPI_API double BTAPI FTK_Downloader_GetFixMaxDownloadRate( HDownloader hDownloader );
	
	//外部调用, 手动设置最大的上传率限制(0.0表示没有限制)
	//Set fixed max upload rate
	FTKERNELAPI_API void BTAPI FTK_Downloader_SetFixMaxUploadRate( HDownloader hDownloader, double fMaxUploadRate = 0.0 );
	
	//外部调用, 获取手动设置最大的上传率限制(0.0表示没有限制)
	//Get fixed max upload rate
	FTKERNELAPI_API double BTAPI FTK_Downloader_GetFixMaxUploadRate( HDownloader hDownloader );
	
	//主动限制某些特定的种子服务器(SEED), 给自己的最大的上传率(0表示没有限制, 注意单位是: KB)
	//Set fixed max upload rate of SOME CERTAIN SEED to me, 0 means no limit, UNIT is KB 
	FTKERNELAPI_API void BTAPI FTK_Downloader_SetSeedMaxUPSpeed( HDownloader hDownloader, unsigned short nSpeed = 0 );
	
	//多少秒中内，禁止某个IP的连接, 只在当前任务存在期间有效
	//Ban IP for X seconds, ONLY for the current active HDownloader 
	FTKERNELAPI_API void BTAPI FTK_Downloader_BanPeerIP( HDownloader hDownloader, const char * lpszIP, UINT nBannedSeconds );
	
	//获取线程的ID
	//Get thread ID
	FTKERNELAPI_API DWORD BTAPI FTK_Downloader_GetThreadID( HDownloader hDownloader );
	
	//////////////////////////////////////////////////////////////////////////
	//全局参数设置
	//Global settings
	
	//将某个Torrent文件的SHA1值加入队列
	//Add torrent into SHA1 list
	FTKERNELAPI_API void BTAPI FTK_GlobalVar_AddTorrentSHA1( const char * lpszSHA1, HDownloader hDownloader );
	
	//将某个Torrent文件的SHA1值从队列中删除
	//Remove torrent from SHA1 list
	FTKERNELAPI_API void BTAPI FTK_GlobalVar_RemoveTorrentSHA1( const char * lpszSHA1 );
	
	//////////////////////////////////////////////////////////////////////////
	//代理服务器函数列表
	//Proxy interface
	
	//设置仅在连接Tracker时使用代理服务器
	//Only tracker using proxy settings
	FTKERNELAPI_API void BTAPI FTK_Proxy_SetOnlyTracker( BOOL bOnlyTracker = FALSE );
	
	//清空当前的代理信息(仅用于PROXYTYPE_NOPROXY)
	//Only PROXYTYPE_NOPROXY
	FTKERNELAPI_API void BTAPI FTK_Proxy_SetType( int nProxyType );
	
	//设置代理(不能是PROXYTYPE_NOPROXY)
	//May not be PROXYTYPE_NOPROXY
	FTKERNELAPI_API void BTAPI FTK_Proxy_SetProxy( int nProxyType, const char * pProxyHost, int ProxyPort );
	
	//设置SOCKS5和HTTP1.1需要认证信息的代理
	//Only SOCKS5 and HTTP1.1 proxies
	FTKERNELAPI_API void BTAPI FTK_Proxy_SetAuthProxy( int nProxyType, const char * pProxyHost, int ProxyPort, const char * pProxyUser, const char * pProxyPass );
	
	//获取代理的类型
	//Return proxy type
	FTKERNELAPI_API int BTAPI FTK_Proxy_GetProxyType();
	
	//获取总共已经下载(验证成功)的数据
	//Get the size of having received data for all file
	FTKERNELAPI_API QWORD BTAPI FTK_Stat_GetTotalFileHaveSize( HDownloader hDownloader );
	
	//获取选择已经下载(验证成功)的数据
	//Get the size of having received data for a file
	FTKERNELAPI_API QWORD BTAPI FTK_Stat_GetSelectedFileHaveSize( HDownloader hDownloader );
	
	//获取已经顺序下载的目前可以从头开始播放的数据长度
	//Get the size of sequential piece from file front
	FTKERNELAPI_API QWORD BTAPI FTK_Stat_GetStartSeqFileSize( HDownloader hDownloader );
	
	//获取最近一次下载的字节数
	//Get the size of lasted receiving data
	FTKERNELAPI_API DWORD BTAPI FTK_Stat_GetLastDataSize( HDownloader hDownloader );
	
	//获取总共丢弃的字节数
	//Get the size of bad data
	FTKERNELAPI_API QWORD BTAPI FTK_Stat_GetBadDataSize( HDownloader hDownloader );
	
	//当前总共的连接的个数
	//Get the number of total peer
	FTKERNELAPI_API UINT BTAPI FTK_Stat_GetTotalPeerCount( HDownloader hDownloader );
	
	//当前主动连接的个数
	//Get the number of active peer
	FTKERNELAPI_API UINT BTAPI FTK_Stat_GetActivePeerCount( HDownloader hDownloader );
	
	//当前的被动连接的个数
	//Get the number of passive peer
	FTKERNELAPI_API UINT BTAPI FTK_Stat_GetPassivePeerCount( HDownloader hDownloader );
	
	//当前正在连接中的个数
	//Get number of connecting peer
	FTKERNELAPI_API UINT BTAPI FTK_Stat_GetConnectingPeerCount( HDownloader hDownloader );
	
	//获取已经连接的种子的个数
	//Get number of seed
	FTKERNELAPI_API UINT BTAPI FTK_Stat_GetSeedCount( HDownloader hDownloader );
	
	//获取正在上传的连接的个数
	//Get the number of uploading peer
	FTKERNELAPI_API UINT BTAPI FTK_Stat_GetUploadPeerCount( HDownloader hDownloader );
	
	//获取正在下载的连接的个数
	//Get the number of downloading peer
	FTKERNELAPI_API UINT BTAPI FTK_Stat_GetDownloadPeerCount( HDownloader hDownloader );
	
	//获取总共可以获取的Seed的个数
	//Get the number of total available seed
	FTKERNELAPI_API UINT BTAPI FTK_Stat_GetTotalAvailSeedCount( HDownloader hDownloader );
	
	//获取总共可以获取的Peer的个数
	//Get the number of peer
	FTKERNELAPI_API UINT BTAPI FTK_Stat_GetTotalAvailPeerCount( HDownloader hDownloader );
	
	//旧的种子的个数
	//Get old seed number
	FTKERNELAPI_API UINT BTAPI FTK_Stat_GetOldSeedPeerCount( HDownloader hDownloader );
	
	//本次运行已经下载的数据长度
	//Get downloaded bytes
	FTKERNELAPI_API QWORD BTAPI FTK_Stat_GetDownloaded( HDownloader hDownloader );
	
	//本次运行已经上传的数据长度
	//Get uploaded bytes
	FTKERNELAPI_API QWORD BTAPI FTK_Stat_GetUploaded( HDownloader hDownloader );
	
	//本次已经运行时间(运行时间不同与下载时间)
	//Get total running time
	FTKERNELAPI_API double BTAPI FTK_Stat_GetRunningTime( HDownloader hDownloader );
	
	//本次下载的时间(如果是做种, 则下载时间永远为0)
	//Get total downloaded time
	FTKERNELAPI_API double BTAPI FTK_Stat_GetDownloadTime( HDownloader hDownloader );
	
	//本次下载剩余的时间, 根据下载率计算
	//Get the left time to download
	FTKERNELAPI_API double BTAPI FTK_Stat_GetLeftTime( HDownloader hDownloader );
	
	//获取当前的上传率
	//Get upload rate
	FTKERNELAPI_API double BTAPI FTK_Stat_GetUploadRate( HDownloader hDownloader );
	
	//获取当前的下载率
	//Get downloading rate
	FTKERNELAPI_API double BTAPI FTK_Stat_GetDownloadRate( HDownloader hDownloader );
	
	//获取指定的Piece的下载进度
	//Get the progress of a piece
	FTKERNELAPI_API void BTAPI FTK_Stat_GetPieceState( HDownloader hDownloader, BYTE *pPiece, int nCount );
	
	//获取检查文件的进度
	//Get the progress of cheching piece
	FTKERNELAPI_API QWORD BTAPI FTK_Stat_GetCheckPieceSize( HDownloader hDownloader );
	
	//获取检查的Piece的个数
	//Get number of checked piece
	FTKERNELAPI_API DWORD BTAPI FTK_Stat_GetCheckPieceCount( HDownloader hDownloader );
	
	//获取已经分配空间的大小
	//Get the size of allocated file
	FTKERNELAPI_API QWORD BTAPI FTK_Stat_GetAllocSpaceSize( HDownloader hDownloader );
	
	//获取当前的健康率
	//Get healthy rate
	FTKERNELAPI_API double BTAPI FTK_Stat_GetHealthRate( HDownloader hDownloader );
	
	//获取当前的最大缓存大小
	//Get the size of max cache
	FTKERNELAPI_API DWORD BTAPI FTK_Stat_GetMaxCacheSize( HDownloader hDownloader );
	
	//获取已经使用的缓存大小
	//Get the size of used cache
	FTKERNELAPI_API DWORD BTAPI FTK_Stat_GetUseCacheSize( HDownloader hDownloader );
	
	//获取本次写硬盘的总的次数
	//Get writed disk count
	FTKERNELAPI_API QWORD BTAPI FTK_Stat_GetWriteDiskCount( HDownloader hDownloader );
	
	//获取本次真正写硬盘的次数
	//Get really writed disk count
	FTKERNELAPI_API QWORD BTAPI FTK_Stat_GetRealWriteDiskCount( HDownloader hDownloader );
	
	//获取本次读硬盘的总的次数
	//Get readed disk count
	FTKERNELAPI_API QWORD BTAPI FTK_Stat_GetReadDiskCount( HDownloader hDownloader );
	
	//获取本次真正读硬盘的次数
	//Get really readed disk count
	FTKERNELAPI_API QWORD BTAPI FTK_Stat_GetRealReadDiskCount( HDownloader hDownloader );
	
	//获取写硬盘的频率(次/秒)
	//Get writing disk frenqence(number/second)
	FTKERNELAPI_API double BTAPI FTK_Stat_GetWriteDiskFrenq( HDownloader hDownloader );
	
	//获取真正写硬盘的频率(次/秒)
	//Get really writing disk frenqence(number/second)
	FTKERNELAPI_API double BTAPI FTK_Stat_GetRealWriteDiskFrenq( HDownloader hDownloader );
	
	//获取读硬盘的频率(次/秒)
	//Get reading disk frenqence(number/second)
	FTKERNELAPI_API double BTAPI FTK_Stat_GetReadDiskFrenq( HDownloader hDownloader );
	
	//获取真正读硬盘的频率(次/秒)
	//Get really reading disk frenqence(number/second)
	FTKERNELAPI_API double BTAPI FTK_Stat_GetRealReadDiskFrenq( HDownloader hDownloader );