FTKernelAPI_SDK/VBDemo/FTKernelAPI.bas


''初始化下载对象4
''Initialize a HDownloader
''@pData: a torrent binary object, a pointer to a binary torrent file content
''@nLength: the length of a torrent binary object
''@pPreAllocFile: a array of preallocated files, 0->no, 1->yes
''@nPreAllocFileLen: length of preallocated array
''@bOnlyCheckFile: only verify data of files
''@lpszDestFileName: the downloaded filename
''@hConfigIni: kernel configuration file handle - INI file
''@lpszLogFileName: output log filename
''@lpszStatusFileName: downloading status filename
''@lpszDesKey: DES-EDE2 password
''@nCodePage: code page of the torrent file
Declare Function FTK_Downloader_Init4 Lib "FTKernelAPI" (ByVal HDownloader As Long, ByRef pData As Byte, ByVal nLength As Long, ByRef pPreAllocFile As Byte, ByVal nPreAllocFileLen As Long, ByVal bOnlyCheckFile As Long, ByVal lpszDestFileName As String, ByVal hConfig As Long, ByVal lpszLogFileName As String, ByVal lpszStatusFileName As String, ByVal bQuicklySeed As Boolean, ByVal lpszDesKey As String, ByVal nCodePage As Long) As Long

'释放下载对象
'Release downloader handle
Declare Function FTK_Downloader_Release Lib "FTKernelAPI" (ByVal HDownloader As Long) As Long

'执行下载线程
'Execute downloader
Declare Function FTK_Downloader_Execute Lib "FTKernelAPI" (ByVal HDownloader As Long) As Long

'暂停下载
'Pause downloader
Declare Sub FTK_Downloader_Pause Lib "FTKernelAPI" (ByVal HDownloader As Long)

'恢复下载
'Resume downloader
Declare Sub FTK_Downloader_Resume Lib "FTKernelAPI" (ByVal HDownloader As Long)

'是否已经初始化
'Is downloader intialized?
Declare Function FTK_Downloader_IsInit Lib "FTKernelAPI" (ByVal HDownloader As Long) As Long

'获取下载任务目前的阶段状态
'Return downloader state
Declare Function FTK_Downloader_GetState Lib "FTKernelAPI" (ByVal HDownloader As Long) As enmFTK_Downloader_State

'是否只是进行文件检查
'Only checking file, don't downloading...
Declare Function FTK_Downloader_IsOnlyCheckFile Lib "FTKernelAPI" (ByVal HDownloader As Long) As Long

'是否已经完成了下载 Lib "FTKernelAPI"(判断选择文件下载)
'Is all selected files finished?
Declare Function FTK_Downloader_IsFinished Lib "FTKernelAPI" (ByVal HDownloader As Long) As Long

'是否已经完成了下载 Lib "FTKernelAPI"(全部下载)
'Is all files finished?
Declare Function FTK_Downloader_IsAllFinished Lib "FTKernelAPI" (ByVal HDownloader As Long) As Long

'连接指定的Peer
'Add external source peer
Declare Sub FTK_Downloader_AddSource Lib "FTKernelAPI" (ByVal HDownloader As Long, ByVal pchIP As String, ByVal nPort As Integer, ByRef pPeerID As Byte)

''连接指定的User
''Add external source peer(socket handle)
Declare Sub FTK_Downloader_AddSourceExt Lib "FTKernelAPI" (ByVal HDownloader As Long, ByVal nSocket As Long)

'外部动态增加辅助的Announce
'Add external announce
Declare Sub FTK_Downloader_AddExtAnnounce Lib "FTKernelAPI" (ByVal HDownloader As Long, ByVal lpszAnnounce As String)

'手动控制Announce马上进行连接
'Reannounce manually
Declare Sub FTK_Downloader_ReannounceAll Lib "FTKernelAPI" (ByVal HDownloader As Long)

'Leo Mod: 2005-10-16
'按照块的先后顺序进行下载(适用于边下载边播放的情况)
'Tell kernel to sequential download piece
Declare Sub FTK_Downloader_SetSeqPicker Lib "FTKernelAPI" (ByVal HDownloader As Long, ByVal bSeq As Long)

'设置下载文件的优先级别
' -2:不下载, -1: 低, 0: 一般, 1:高
'Set priority of file
'-2: no download, -1: low, 0: middle, 1: high
Declare Sub FTK_Downloader_SetFilePriority Lib "FTKernelAPI" (ByVal HDownloader As Long, ByVal nIndex As Long, ByVal chPriority As Byte, ByVal bDoPriority As Long)

'强制立刻重新将文件的优先级赋值给Piece
'Force to set priority of all piece immediately
Declare Sub FTK_Downloader_ForceFilePriority Lib "FTKernelAPI" (ByVal HDownloader As Long)

'外部调用, 手动设置最大的下载率限制 Lib "FTKernelAPI"(0.0表示没有限制)
'Set fixed max download rate
Declare Sub FTK_Downloader_SetFixMaxDownloadRate Lib "FTKernelAPI" (ByVal HDownloader As Long, ByVal fMaxDownloadRate As Double)

'外部调用, 获取手动设置最大的下载率限制(0.0表示没有限制)
'Get fixed max download rate
Declare Function FTK_Downloader_GetFixMaxDownloadRate Lib "FTKernelAPI" (ByVal HDownloader As Long) As Double


'外部调用, 手动设置最大的上传率限制 Lib "FTKernelAPI"(0.0表示没有限制)
'Set fixed max upload rate
Declare Sub FTK_Downloader_SetFixMaxUploadRate Lib "FTKernelAPI" (ByVal HDownloader As Long, ByVal fMaxUploadRate As Double)

'外部调用, 获取手动设置最大的上传率限制(0.0表示没有限制)
'Get fixed max upload rate
Declare Function FTK_Downloader_GetFixMaxUploadRate Lib "FTKernelAPI" (ByVal HDownloader As Long) As Double

'主动限制某些特定的种子服务器(SEED), 给自己的最大的上传率(0表示没有限制, 注意单位是: KB)
'Set fixed max upload rate of SOME CERTAIN SEED to me, 0 means no limit, UNIT is KB
Declare Sub FTK_Downloader_SetSeedMaxUPSpeed Lib "FTKernelAPI" (ByVal HDownloader As Long, ByVal nSpeed As Integer)

'多少秒中内，禁止某个IP的连接, 只在当前任务存在期间有效
'Ban IP for X seconds, ONLY for the current active HDownloader
Declare Sub FTK_Downloader_BanPeerIP Lib "FTKernelAPI" (ByVal HDownloader As Long, ByVal lpszIP As String, ByVal nBannedSeconds As Long)


'获取线程的ID
'Get thread ID
Declare Function FTK_Downloader_GetThreadID Lib "FTKernelAPI" (ByVal HDownloader As Long) As Long

'''''''''''''''''''''''''''''''''''''
'全局参数设置
'Global settings

'将某个Torrent文件的SHA1值加入队列
'Add torrent into SHA1 list
Declare Sub FTK_GlobalVar_AddTorrentSHA1 Lib "FTKernelAPI" (ByVal lpszSHA As String, ByVal HDownloader As Long)

'将某个Torrent文件的SHA1值从队列中删除
'Remove torrent from SHA1 list
Declare Sub FTK_GlobalVar_RemoveTorrentSHA1 Lib "FTKernelAPI" (ByVal lpszSHA As String)

'''''''''''''''''''''''''''''''''''''
'代理服务器函数列表
'Proxy interface

'设置仅在连接Tracker时使用代理服务器
'Only tracker using proxy settings
Declare Sub FTK_Proxy_SetOnlyTracker Lib "FTKernelAPI" (ByVal bOnlyTracker As Long)

'清空当前的代理信息 Lib "FTKernelAPI"(仅用于PROXYTYPE_NOPROXY)
'Only PROXYTYPE_NOPROXY
Declare Sub FTK_Proxy_SetType Lib "FTKernelAPI" (ByVal nProxyType As Long)

'设置代理 Lib "FTKernelAPI"(不能是PROXYTYPE_NOPROXY)
'May not be PROXYTYPE_NOPROXY
Declare Sub FTK_Proxy_SetProxy Lib "FTKernelAPI" (ByVal nProxyType As Long, ByVal pProxyHost As String, ByVal ProxyPort As Long)

'设置SOCKS5和HTTP1.1需要认证信息的代理
'Only SOCKS5 and HTTP1.1 proxies
Declare Sub FTK_Proxy_SetAuthProxy Lib "FTKernelAPI" (ByVal nProxyType As Long, ByVal pProxyHost As String, ByVal ProxyPort As Long, ByVal pProxyUser As String, ByVal pProxyPass As String)

'获取代理的类型
'Return proxy Type
Declare Function FTK_Proxy_GetProxyType Lib "FTKernelAPI" () As Long

'''''''''''''''''''''''''''''''''''''
'Downloader statistic information interface

'获取总共已经下载 Lib "FTKernelAPI"(验证成功)的数据
'Get the size of having received data for all file
Declare Function FTK_Stat_GetTotalFileHaveSize Lib "FTKernelAPI" (ByVal HDownloader As Long) As TwoLong

'获取选择已经下载 Lib "FTKernelAPI"(验证成功)的数据
'Get the size of having received data for a file
Declare Function FTK_Stat_GetSelectedFileHaveSize Lib "FTKernelAPI" (ByVal HDownloader As Long) As TwoLong

'Leo Mod: 2005-10-16
'获取已经顺序下载的目前可以从头开始播放的数据长度
'Get the size of sequential piece from file front
Declare Function FTK_Stat_GetStartSeqFileSize Lib "FTKernelAPI" (HDownloader As Long) As TwoLong

'获取最近一次下载的字节数
'Get the size of lasted receiving data
Declare Function FTK_Stat_GetLastDataSize Lib "FTKernelAPI" (ByVal HDownloader As Long) As Long

'获取总共丢弃的字节数
'Get the size of bad data
Declare Function FTK_Stat_GetBadDataSize Lib "FTKernelAPI" (ByVal HDownloader As Long) As TwoLong

'当前总共的连接的个数
'Get the number of total peer
Declare Function FTK_Stat_GetTotalPeerCount Lib "FTKernelAPI" (ByVal HDownloader As Long) As Long

'当前主动连接的个数
'Get the number of active peer
Declare Function FTK_Stat_GetActivePeerCount Lib "FTKernelAPI" (ByVal HDownloader As Long) As Long

'当前的被动连接的个数
'Get the number of passive peer
Declare Function FTK_Stat_GetPassivePeerCount Lib "FTKernelAPI" (ByVal HDownloader As Long) As Long

'当前正在连接中的个数
'Get number of connecting peer
Declare Function FTK_Stat_GetConnectingPeerCount Lib "FTKernelAPI" (ByVal HDownloader As Long) As Long

'获取已经连接的种子的个数
'Get number of seed
Declare Function FTK_Stat_GetSeedCount Lib "FTKernelAPI" (ByVal HDownloader As Long) As Long

'获取正在上传的连接的个数
'Get the number of uploading peer
Declare Function FTK_Stat_GetUploadPeerCount Lib "FTKernelAPI" (ByVal HDownloader As Long) As Long

'获取正在下载的连接的个数
'Get the number of downloading peer
Declare Function FTK_Stat_GetDownloadPeerCount Lib "FTKernelAPI" (ByVal HDownloader As Long) As Long

'获取总共可以获取的Seed的个数
'Get the number of total available seed
Declare Function FTK_Stat_GetTotalAvailSeedCount Lib "FTKernelAPI" (ByVal HDownloader As Long) As Long

'获取总共可以获取的Peer的个数
'Get the number of peer
Declare Function FTK_Stat_GetTotalAvailPeerCount Lib "FTKernelAPI" (ByVal HDownloader As Long) As Long

'旧的种子的个数
'Get old seed number
Declare Function FTK_Stat_GetOldSeedPeerCount Lib "FTKernelAPI" (ByVal HDownloader As Long) As Long

'本次运行已经下载的数据长度
'Get downloaded bytes
Declare Function FTK_Stat_GetDownloaded Lib "FTKernelAPI" (ByVal HDownloader As Long) As TwoLong

'本次运行已经上传的数据长度
'Get uploaded bytes
Declare Function FTK_Stat_GetUploaded Lib "FTKernelAPI" (ByVal HDownloader As Long) As TwoLong

'本次已经运行时间 Lib "FTKernelAPI"(运行时间不同与下载时间)
'Get total running time
Declare Function FTK_Stat_GetRunningTime Lib "FTKernelAPI" (ByVal HDownloader As Long) As Double

'本次下载的时间 Lib "FTKernelAPI"(如果是做种, 则下载时间永远为0)
'Get total downloaded time
Declare Function FTK_Stat_GetDownloadTime Lib "FTKernelAPI" (ByVal HDownloader As Long) As Double

'本次下载剩余的时间, 根据下载率计算
'Get the left time to download
Declare Function FTK_Stat_GetLeftTime Lib "FTKernelAPI" (ByVal HDownloader As Long) As Double

'获取当前的上传率
'Get upload rate
Declare Function FTK_Stat_GetUploadRate Lib "FTKernelAPI" (ByVal HDownloader As Long) As Double

'获取当前的下载率
'Get downloading rate
Declare Function FTK_Stat_GetDownloadRate Lib "FTKernelAPI" (ByVal HDownloader As Long) As Double

'获取指定的Piece的下载进度
'Get the progress of a piece
Declare Sub FTK_Stat_GetPieceState Lib "FTKernelAPI" (ByVal HDownloader As Long, ByRef pPiece As Byte, ByVal nCount As Long)

'获取检查文件的进度
'Get the progress of cheching piece
Declare Function FTK_Stat_GetCheckPieceSize Lib "FTKernelAPI" (ByVal HDownloader As Long) As TwoLong

'获取检查的Piece的个数
'Get number of checked piece
Declare Function FTK_Stat_GetCheckPieceCount Lib "FTKernelAPI" (ByVal HDownloader As Long) As Long

'获取已经分配空间的大小
'Get the size of allocated file
Declare Function FTK_Stat_GetAllocSpaceSize Lib "FTKernelAPI" (ByVal HDownloader As Long) As TwoLong

'获取当前的健康率
'Get healthy rate
Declare Function FTK_Stat_GetHealthRate Lib "FTKernelAPI" (ByVal HDownloader As Long) As Double

'获取当前的最大缓存大小
'Get the size of max cache
Declare Function FTK_Stat_GetMaxCacheSize Lib "FTKernelAPI" (ByVal HDownloader As Long) As Long

'获取已经使用的缓存大小
'Get the size of used cache
Declare Function FTK_Stat_GetUseCacheSize Lib "FTKernelAPI" (ByVal HDownloader As Long) As Long

'获取本次写硬盘的总的次数
'Get writed disk count
Declare Function FTK_Stat_GetWriteDiskCount Lib "FTKernelAPI" (ByVal HDownloader As Long) As TwoLong

'获取本次真正写硬盘的次数
'Get really writed disk count
Declare Function FTK_Stat_GetRealWriteDiskCount Lib "FTKernelAPI" (ByVal HDownloader As Long) As TwoLong

'获取本次读硬盘的总的次数
'Get readed disk count
Declare Function FTK_Stat_GetReadDiskCount Lib "FTKernelAPI" (ByVal HDownloader As Long) As TwoLong

'获取本次真正读硬盘的次数
'Get really readed disk count
Declare Function FTK_Stat_GetRealReadDiskCount Lib "FTKernelAPI" (ByVal HDownloader As Long) As TwoLong

'获取写硬盘的频率 Lib "FTKernelAPI"(次'秒)
'Get writing disk frenqence Lib "FTKernelAPI"(number'second)
Declare Function FTK_Stat_GetWriteDiskFrenq Lib "FTKernelAPI" (ByVal HDownloader As Long) As Double

'获取真正写硬盘的频率 Lib "FTKernelAPI"(次'秒)
'Get really writing disk frenqence Lib "FTKernelAPI"(number'second)
Declare Function FTK_Stat_GetRealWriteDiskFrenq Lib "FTKernelAPI" (ByVal HDownloader As Long) As Double

'获取读硬盘的频率 Lib "FTKernelAPI"(次'秒)
'Get reading disk frenqence Lib "FTKernelAPI"(number'second)
Declare Function FTK_Stat_GetReadDiskFrenq Lib "FTKernelAPI" (ByVal HDownloader As Long) As Double

'获取真正读硬盘的频率 Lib "FTKernelAPI"(次'秒)
'Get really reading disk frenqence Lib "FTKernelAPI"(number'second)
Declare Function FTK_Stat_GetRealReadDiskFrenq Lib "FTKernelAPI" (ByVal HDownloader As Long) As Double
